2010-07-11  Chong Yidong  <cyd@stupidchicken.com>

	* xfaces.c (Vface_remapping_alist): Doc fix (Bug#6091).

2010-07-11  Andreas Schwab  <schwab@linux-m68k.org>

	* callint.c (Fcall_interactively): Use strchr, strrchr instead of
	index, rindex.
	* doc.c (get_doc_string, Fsnarf_documentation): Likewise.
	* editfns.c (Fuser_full_name, Fformat): Likewise.
	* emacs.c (argmatch, sort_args, decode_env_path): Likewise.
	* fileio.c (Ffile_symlink_p): Likewise.
	* filelock.c (current_lock_owner): Likewise.
	* font.c (font_parse_name, font_parse_family_registry): Likewise.
	* fontset.c (fontset_pattern_regexp): Likewise.
	* lread.c (read1): Likewise.
	* sysdep.c (init_system_name): Likewise.
	* xfns.c (select_visual): Likewise.
	* s/hpux10-20.h (index, rindex): Don't define.
	* s/ms-w32.h (index): Likewise.
	* s/usg5-4.h: Likewise.

	* callproc.c (relocate_fd): Use F_DUPFD if defined.

	* alloc.c (pending_malloc_warning, malloc_warning): Add const.
	* callproc.c (relocate_fd, getenv_internal_1, getenv_internal)
	(egetenv): Likewise.
	* doprnt.c (doprnt): Likewise.
	* editfns.c (set_time_zone_rule, format2): Likewise.
	* emacs.c (decode_env_path): Likewise.
	* eval.c (signal_error, error): Likewise.
	* insdel.c (replace_range_2): Likewise.
	* keyboard.c (cmd_error_internal): Likewise.
	* lread.c (isfloat_string, make_symbol, dir_warning): Likewise.
	* print.c (write_string, write_string_1, print_error_message):
	Likewise.
	* vm-limit.c (warn_function, memory_warnings): Likewise.
	* xdisp.c (message1, message1_nolog, message_with_string)
	(vmessage, message, message_nolog): Likewise.
	* emacs.c: Remove duplicate declaration.
	* keyboard.h: Likewise.
	* lisp.h: Update prototypes.

	* eval.c: Fix indentation problem.

	* keyboard.c: Include "process.h"

	* eval.c: Remove obsolete noinline declaration.
	* fns.c: Likewise.

2010-07-11  Ken Raeburn  <raeburn@raeburn.org>

	* doprnt.c (doprnt): Take a va_list argument instead of count and
	pointer.